# toy-compiler

./: .gitignore  LICENSE  PROJECT_SUMMARY.txt  README.md  demo_lexer.py  demo_tokens.py  luna.py  pyproject.toml  requirements.txt  setup.py  test_examples.py  toy.py
docs/: BUILD_PHASES.md  COMPILER_DESIGN.md  COMPILER_INTERNALS.md  IR_OPTIMIZATIONS.md  LANGUAGE_SPEC.md
examples/: collatz.toy  factorial.luna  fibonacci.toy  fizzbuzz.luna  gcd.luna  hello_world.luna  power.luna  prime_checker.luna  sum_of_digits.luna  triangle.toy
src/: __init__.py
src/codegen/: __init__.py  asm_emitter.py  llvm_codegen.py  llvm_emitter.py  stack_frame.py  x86_64_codegen.py
src/ir/: __init__.py  cfg.py  instructions.py  ir_generator.py  ir_printer.py  ssa.py
src/ir/optimizations/: __init__.py  algebraic.py  constant_folding.py  control_flow.py  copy_propagation.py  cse.py  dead_code_elimination.py  pass_manager.py
src/lexer/: lexer.py  token.py
src/parser/: __init__.py  ast_nodes.py  parser.py
src/semantic/: __init__.py  semantic_analyzer.py  symbol_table.py  type_checker.py  types.py
src/utils/: error.py
tests/: test_codegen.py  test_integration.py  test_ir.py  test_lexer.py  test_llvm_codegen.py  test_optimizations.py  test_parser.py  test_semantic.py
